# Coursework-2

./: main.py  pyproject.toml  requirements.txt
data/: test.txt  vacancies.csv  vacancies.json
src/: abstract_classes.py  data_filtering.py  file_saver.py  interaction.py  job_opening.py  utils.py  vacancy.py
tests/: conftest.py  test_file_saver.py  test_job_opening.py  test_utils.py  test_vacancy.py
