[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Ex_person <baranovs11@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
