[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Ex_person <baranovs11@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.13.0"
isort = "^5.13.2"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = false
warn_return_any = true
exclude = '.venv'
disable_error_code = 'no-redef, index, operator, assignment, import-untyped, arg-type'

[[tool.mypy.overrides]]
dissalow_untyped_defs = false
module = ["tests.*"]

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119